--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,13 @@
             <artifactId>emoji-java</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>me.crypnotic</groupId>
+            <artifactId>neutron-n3fs</artifactId>
+            <scope>system</scope>
+            <version>3.0.0-SNAPSHOT</version>
+            <systemPath>${basedir}/lib/Neutron_N3FS.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <repositories>
