--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                 </includes>
             </resource>
             <resource>
-                <directory>/</directory>
+                <directory>.</directory>
                 <filtering>false</filtering>
                 <includes>
                     <include>LICENSE.txt</include>
@@ -160,7 +160,7 @@
         <dependency>
             <groupId>com.velocitypowered</groupId>
             <artifactId>velocity-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.9-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -171,7 +171,7 @@
         <dependency>
             <groupId>org.javacord</groupId>
             <artifactId>javacord</artifactId>
-            <version>3.0.4</version>
+            <version>3.0.6</version>
             <type>pom</type>
         </dependency>
         <dependency>
