--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>uk.co.n3fs.mc</groupId>
     <artifactId>gCV-Bridge</artifactId>
-    <version>0.2</version>
+    <version>0.2.1-SNAPSHOT</version>
     <name>gCV-Bridge</name>
 
     <properties>
@@ -15,7 +15,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <!--suppress UnresolvedMavenProperty -->
-        <full.version>${project.version}.${git.closest.tag.commit.count}</full.version>
+        <full.version>${project.version}-dev-${git.closest.tag.commit.count}</full.version>
     </properties>
 
     <build>
