--- a/.gitignore
+++ b/.gitignore
@@ -129,4 +129,4 @@ buildNumber.properties
 # End of https://www.gitignore.io/api/java,maven,intellij+all
 
 # Neutron dependency
-!lib/Neutron_N3FS.*
+!lib/Neutron-N3FS-*.jar
