--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
         <dependency>
             <groupId>uk.co.n3fs.mc</groupId>
             <artifactId>gchat-velocity</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
