--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
         <!-- For release -->
         <!--<full.version>${project.version}</full.version>-->
@@ -168,7 +168,7 @@
         <dependency>
             <groupId>com.velocitypowered</groupId>
             <artifactId>velocity-api</artifactId>
-            <version>1.1.2-SNAPSHOT</version>
+            <version>1.1.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>uk.co.n3fs.mc</groupId>
             <artifactId>gchat-velocity</artifactId>
-            <version>2.0.2</version>
+            <version>2.1.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -197,11 +197,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>me.crypnotic</groupId>
-            <artifactId>neutron-n3fs</artifactId>
-            <scope>system</scope>
-            <version>4.0.0-SNAPSHOT</version>
-            <systemPath>${basedir}/lib/Neutron-N3FS-4.0.0-SNAPSHOT.jar</systemPath>
+            <groupId>uk.co.n3fs.mc</groupId>
+            <artifactId>n3fs-neutron</artifactId>
+            <version>4.0.2</version>
+            <classifier>all</classifier>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>dev.vankka</groupId>
@@ -220,7 +220,7 @@
     <repositories>
         <repository>
             <id>velocity</id>
-            <url>https://repo.velocitypowered.com/snapshots/</url>
+            <url>https://nexus.velocitypowered.com/repository/maven-public/</url>
         </repository>
         <repository>
             <id>sponge</id>
