--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,8 @@ discord:
   # The IDs of the channels to send messages to.
   # You can specify multiple channels here by separating the IDs with a comma.
   out-channels: []
+  # The URLs of webhooks you want to send to
+  webhooks: []
   # Settings for the playerlist command
   playerlist:
     # Whether to enable the playerlist command.
